Move to .toList() Collection to fix Potential Bugs (#84864)
I noticed a few spots where we rely on the not-guaranteed
behavior of `Collectors.toList()` producing a mutable List.
I fixed those that Idea could quickly find and replaced
many other spots that were using the collector with `toList()`
which always creates a faster+immutable list (to make sure
we were not relying on mutable lists in more spots).

Relates to #84760